objects/ASI_TnE_Corp_Card_Statement_Upload__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Bill_Month__c</fullName>
        <label>Bill Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JANUARY</fullName>
                </value>
                <value>
                    <fullName>FEBURARY</fullName>
                </value>
                <value>
                    <fullName>MARCH</fullName>
                </value>
                <value>
                    <fullName>APRIL</fullName>
                </value>
                <value>
                    <fullName>MAY</fullName>
                </value>
                <value>
                    <fullName>JUNE</fullName>
                </value>
                <value>
                    <fullName>JULY</fullName>
                </value>
                <value>
                    <fullName>AUGUST</fullName>
                </value>
                <value>
                    <fullName>SEPTEMBER</fullName>
                </value>
                <value>
                    <fullName>OCTOBER</fullName>
                </value>
                <value>
                    <fullName>NOVEMBER</fullName>
                </value>
                <value>
                    <fullName>DECEMBER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Bill_Year__c</fullName>
        <label>Bill Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Business_Address__c</fullName>
        <label>Business Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Business_Type__c</fullName>
        <label>Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Card_Number__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Charge_Date__c</fullName>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Charge_Time__c</fullName>
        <label>Charge Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Control_Account_Name__c</fullName>
        <label>Control Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Corp_Card_Employee_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corp Card Employee Mapping</label>
        <referenceTo>ASI_TnE_Corp_Card_Employee_Mapping__c</referenceTo>
        <relationshipLabel>Corp Card Statements Upload</relationshipLabel>
        <relationshipName>ASI_TnE_Corp_Card_Statement_Upload</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Full_Name__c</fullName>
        <label>Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Approval_Number__c</fullName>
        <label>Approval Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_MCC_Group__c</fullName>
        <label>MCC Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Name_Company__c</fullName>
        <label>Name &amp; Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Submitted_Currency__c</fullName>
        <label>Submitted Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Transaction_Description__c</fullName>
        <label>Transaction Description</label>
        <type>TextArea</type>
    </fields>
    <label>ASI TnE Corp Card Statement Upload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TnE_Card_Number__c</columns>
        <columns>ASI_TnE_Statement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCI-{000000}</displayFormat>
        <label>TnE Corp Card Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Corp Card Statement Upload</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_HK_Corp_Card_Upload</fullName>
        <active>true</active>
        <label>ASI TnE HK Corp Card Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Corp_Card_Upload</fullName>
        <active>true</active>
        <label>ASI TnE MY Corp Card Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Corp_Card_Upload</fullName>
        <active>true</active>
        <label>ASI TnE SG Corp Card Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Corp_Card_Upload</fullName>
        <active>true</active>
        <label>ASI TnE TH Corp Card Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Corp_Card_Upload</fullName>
        <active>true</active>
        <label>ASI TnE TW Corp Card Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>TnE_KR_Corp_Card_Upload</fullName>
        <active>true</active>
        <label>TnE KR Corp Card Upload</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_TnE_Corp_Card_Empty_Mapping</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(ASI_TnE_Corp_Card_Employee_Mapping__c )</errorConditionFormula>
        <errorMessage>Corp Card must have a Corp Card Employee Mapping</errorMessage>
    </validationRules>
</CustomObject>